# dotr

./: Cargo.toml  LICENSE  README.md  SPEC.md  install.ps1  install.sh
.github/release-notes/: v0.1.0.md  v0.1.1.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  main.js  styles.css
src/: backup.rs  cli.rs  config.rs  custom_backup.rs  daemon.rs  doctor.rs  encryption.rs  environment.rs  git.rs  hash.rs  index.rs  init.rs  keygen.rs  lib.rs  main.rs  manage.rs  normalize.rs  paths.rs  progress.rs  repo.rs  restore.rs  status.rs  structured_log.rs  terminal.rs  watch.rs
