[package]
name = "dotr"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
hex = "0.4"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
