[package]
name = "dotr"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
hex = "0.4"
libc = "0.2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
