[package]
name = "dotr-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust-native backup tool for personal configuration files"
license = "MIT"
repository = "https://github.com/chenyukang/dotr"
homepage = "https://chenyukang.github.io/dotr/"
readme = "README.md"
keywords = ["dotfiles", "backup", "cli", "git", "age"]
categories = ["command-line-utilities", "config"]

[lib]
name = "dotr"
path = "src/lib.rs"

[[bin]]
name = "dotr"
path = "src/main.rs"

[dependencies]
age = "0.11"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
hex = "0.4"
libc = "0.2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
similar = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
